# opengl-scene-renderer

./: CMakeLists.txt  Camera.cpp  Camera.h  GLContext.cpp  GLContext.h  GameContext.cpp  GameContext.h  GraphicsContext.cpp  GraphicsContext.h  Input.h  KeyInput.cpp  KeyInput.h  Makefile  MouseInput.cpp  MouseInput.h  OBJLoader.h  Object.cpp  Object.h  PlayerState.cpp  PlayerState.h  README.md  Sprite.cpp  Sprite.h  UserContext.cpp  UserContext.h  UserState.h  VertexArrayObject.cpp  VertexArrayObject.h  gl_libs.h  gllibs.h  main.cpp  statics.h
shaders/: main.frag  main.vert
src/: AudioContext.cpp  AudioContext.h  CMakeLists.txt  Camera.cpp  Camera.h  GameContext.cpp  GraphicsContext.cpp  Input.h  KeyInput.cpp  KeyInput.h  Loader.h  Log.h  Model.h  MouseInput.cpp  MouseInput.h  OBJLoader.cpp  OBJLoader.h  Object.cpp  Object.h  PhysicsContext.cpp  PhysicsContext.h  RenderBuffer.h  Sprite.cpp  Sprite.h  User.h  UserContext.cpp  UserContext.h  VertexArrayObject.cpp  VertexArrayObject.h  main.cpp  statics.h
tests/unit/: CMakeLists.txt  LoaderTests.cpp  ObjectTests.cpp
